# auto-sell

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.beat  Dockerfile.worker  MVP_PLAN.md  README.md  ROADMAP.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
apps/catalog/: admin.py  api.py  models.py  search.py  signals.py  storage.py
apps/catalog/migrations/: 0001_initial.py  0002_alter_productmedia_options.py
apps/conversations/: admin.py  api.py  llm.py  models.py  prompts.py  schemas.py  tasks.py  whatsapp.py
apps/conversations/migrations/: 0001_initial.py  0002_alter_conversation_state.py
apps/notifications/: admin.py  models.py  tasks.py
apps/notifications/migrations/: 0001_initial.py
apps/payments/: admin.py  api.py  models.py  tasks.py
apps/payments/gateways/: base.py  paystack.py
apps/payments/migrations/: 0001_initial.py
apps/tenants/: admin.py  admin_site.py  models.py
apps/tenants/migrations/: 0001_initial.py  0002_tenant_wa_app_secret.py
auto_sell/: api.py  celery.py  urls.py  wsgi.py
auto_sell/settings/: base.py  local.py  production.py
docs/: admin.md  data-models.md  dependencies.md  deployment-coolify.md  infrastructure.md  settings.md  testing.md
tests/: conftest.py
tests/catalog/: test_search.py
tests/conversations/: test_tasks.py  test_webhooks.py
tests/payments/: test_tasks.py  test_webhook.py
