[project]
name = "auto-sell"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "django-ninja>=1.3",
    "celery[redis]>=5.3",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "openai>=1.0",
    "boto3>=1.34",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    "django-environ>=0.11",
    "django-extensions>=3.2",
]

[dependency-groups]
dev = [
    "ipython>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "faker>=24.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "auto_sell.settings.local"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests", "apps"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "faker>=24.0",
]
